[tool.poetry]
name = "dextools-python"
version = "0.3.2"
description = "A simple Python API wrapper for DEXTools"
repository = "https://github.com/alb2001/dextools-python"
authors = ["alb2001 <alb2001@outlook.es>"]
license = "MIT"
readme = "README.md"
keywords = ["dextools", "api", "wrapper", "blockchain", "trading", "exchange", "uniswap"]
packages = [{include = "dextools_python"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.3"
aiohttp = "^3.11.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.23.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
